<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100"
    tools:ignore="MissingConstraints">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="Logic Test" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/question_one"
        app:layout_constraintStart_toStartOf="@+id/appBarLayout"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/inputQuestionOneEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_input"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/resultQuestionOneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_button"
        app:layout_constraintBottom_toBottomOf="@+id/inputQuestionOneEditText"
        app:layout_constraintStart_toEndOf="@+id/inputQuestionOneEditText"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/answer"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="@+id/inputQuestionOneEditText"
        app:layout_constraintTop_toBottomOf="@+id/inputQuestionOneEditText" />

    <TextView
        android:id="@+id/resultMiddleIndexTextView"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/question_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/resultMiddleIndexTextView" />

    <EditText
        android:id="@+id/inputQuestionTwoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_input"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/resultQuestionTwoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_button"
        app:layout_constraintBottom_toBottomOf="@+id/inputQuestionTwoEditText"
        app:layout_constraintStart_toEndOf="@+id/inputQuestionTwoEditText"
        app:layout_constraintTop_toTopOf="@+id/inputQuestionTwoEditText" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/answer"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="@+id/inputQuestionTwoEditText"
        app:layout_constraintTop_toBottomOf="@+id/inputQuestionTwoEditText" />

    <TextView
        android:id="@+id/resultPalindromeTextView"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="ex. 1,2,3,4"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="@+id/resultQuestionOneButton"
        app:layout_constraintStart_toEndOf="@+id/resultQuestionOneButton" />


</androidx.constraintlayout.widget.ConstraintLayout>